# taskus

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
.direnv/: flake-profile  flake-profile.rc
.github/workflows/: ci.yml
src/: add.rs  cli.rs  complete.rs  delete.rs  init.rs  lib.rs  list.rs  main.rs  utils.rs
