[package]
name = "taskus"
version = "0.1.0"
edition = "2021"
authors = ["Megumin <meguminloli@protonmail.com>"]
description = "A CLI for fast and simple TODOs"
readme = "./README.md"
license-file = "UNLICENSE"
keywords = ["cli", "todo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.5", default-features = false, features = ["unicode", "suggestions", "env", "color", "std"] }
clap_generate = "3.0.0-beta.5"
dirs = "4"
sqlite = "0.26"
ansi_term = "0.12"
tabwriter = "1.2"

[build-dependencies]
clap = { version = "3.0.0-beta.5", default-features = false, features = [] }
clap_generate = "3.0.0-beta.5"
